# shiny-couscous

./: .dockerignore  .env  .gitignore  Dockerfile  ai_integration.py  docker-compose.yml  pyproject.toml
app/: main.py
app/api/endpoints/: health.py  parse.py
app/db/: database.py
app/schemas/: parse_model.py
checker/: checker.py  test_cases.json
data/: init.sql
prompts/: prompt_1.md  prompt_2.md  prompt_3.md  prompt_4.md  system.md
