[project]
name = "shiny-couscous"
version = "0.1.0"
description = ""
authors = [
    {name = "Shahdidul",email = "theshahidkhan.2004@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "docker (>=7.1.0,<8.0.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
